# tec-fetcher

./: .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  docker_startup.sh
.sqlx/: query-12c49096ad4981e33cf026af3a1743815e3c4c0951d27c7610bc92aa57a5caba.json  query-62a9b226e6ef483b3a415754dabf718d4bc5210a9ed696ac44a4221596a2a578.json
configs/: api.ckonrad.io.conf  docker-compose.yml  refresh_gtfs.sh
migrations/: 20241110232038_init.sql
sql-ds/: q1.sql  q2.sql
src/: api.rs  database.rs  fetcher.rs  main.rs  quadtree.rs  store.rs  utils.rs
src/api/: gtfs.rs  rt.rs  static_serve.rs  ws.rs
