[package]
name = "tec-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.3.0"
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7.2", features = ["ws", "tokio"] }
tower-http = { version = "0.5.0", features = ["cors"] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["preserve_order"] }
gtfs-structures = "0.39.0"
dotenv = "0.15.0"
base64 = "0.21.5"
ureq = "2.9.1"
flate2 = "1.0.28"
rayon = "1.8.0"
dashmap = { version = "5.5.3", features = ["rayon"] }

[build-dependencies]
protobuf-codegen = "3.3.0"
