[package]
name = "tec-fetcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
protobuf = "3.7.1"
tokio = { version = "1.41.1", features = ["full"] }
axum = { version = "0.7.7", features = ["ws", "tokio"] }
tower-http = { version = "0.6.1", features = ["cors"] }
chrono = "0.4.31"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = { version = "1.0.132", features = ["preserve_order"] }
gtfs-structures = "0.42.0"
dotenv = "0.15.0"
base64 = "0.22.1"
ureq = "2.10.1"
flate2 = "1.0.28"
rayon = "1.10.0"
dashmap = { version = "6.1.0", features = ["rayon"] }
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-native-tls",
] }
async-trait = "0.1.83"

[build-dependencies]
protobuf-codegen = "3.3.0"
